fix alignment of quotation mark background image

--- a/style.css
+++ b/style.css
@@ -180,11 +180,11 @@ body {
   .testimonial-1::before {
     content: "";
     position: absolute;
-    top: 1.5rem;
+    top: 0rem;
     right: 8rem;
 
-    width: 6.5rem;
-    height: 6.5rem;
+    width: 8rem;
+    height: 8rem;
 
     background-image: url("./images/bg-pattern-quotation.svg");
     background-repeat: no-repeat;
